--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ La ceniza puede dañar motores y piezas metálicas, así que evita conducir. Si 
 <br>
 </div>
 <div>
-<img src="imagenes/Gracias1.jpg" width="25%" height="25%"> </div>
+<img src="imagenes/Gracias1.png" width="55%" height="55%"> </div>
 </div>
   
   
@@ -209,7 +209,7 @@ La ceniza puede dañar motores y piezas metálicas, así que evita conducir. Si 
 <br>
 </div>
 <div>
-<img src="imagenes/Gracias2.jpg" width="25%" height="25%"> </div>
+<img src="imagenes/Gracias2.png" width="25%" height="25%"> </div>
 </div>
   
   
